# batless

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  BRANCH_RESOLUTION_SUMMARY.md  CHANGELOG.md  CHANGELOG.md.bak  CICD_PIPELINE_HEALTH_REPORT.md  CI_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  NEXT_STEPS.md  OPTIMIZATION_TEST_RESULTS.md  P2_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_REPORT.md  PIPELINE_STATUS_REPORT.md  PRD.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  README.md  RELEASE.md  RELEASE_CHECKLIST_v0.4.0.md  ROADMAP.md  SECURITY.md  SECURITY_TESTING.md  TECHNICAL_DEBT_RESOLUTION.md  TEST_BRANCH_PROTECTION.md  TODO.md  WORKFLOW_CONSOLIDATION_PLAN.md  benchmark_baseline.txt  benchmark_current.txt  build.rs  ci-pipeline-report.md  cliff.toml  demo.sh  (+14 more)
.github/: CODEOWNERS  FUNDING.yml  RELEASE_CHECKLIST.md  dependabot.yml  pull_request_template.md
.github/scripts/: merge-own-pr.sh  (+8 more)
.perf_tmp/: startup_operations.times
benches/: performance.rs
benchmark_files/: large.rs  medium.rs
completions/: _batless  batless.bash  batless.fish  batless.ps1
docs/: AI_EDITOR_INTEGRATION.md  ARCHITECTURE.md  BATLESS_vs_BAT.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_SETUP.md  CLAUDE_INTEGRATION_ISSUE.md  DESIGN_v0.3.0_PLUGINS.md  DEVELOPMENT_GUIDE.md  FEATURE_PROPOSAL_LINE_RANGE.md  GITHUB_ACTIONS_UPDATE_STRATEGY.md  HOMEBREW_AUTOMATION.md  IMPROVED_ERROR_MESSAGES_PLAN.md  PERFORMANCE_BASELINE.md  PERFORMANCE_GUARD.md  PHILOSOPHY.md  PHILOSOPHY_AND_SCOPE.md  PRD_GIT_INTEGRATION.md  PRD_ORIGINAL.md  PUBLISHING.md  RELEASE_ANALYSIS_V0.2.2.md  RELEASE_NOTES_TEMPLATE_0.2.4.md  SECURITY_TESTING.md  USAGE_TRACKING.md  benchmark_baseline.md
examples/: demo.py  theme-showcase.rs
fuzz/: Cargo.toml
homebrew-tap-setup/: README.md  tap-README.md
issues/: ISSUE_CLI_MISMATCH.md
scripts/: batless-logger  batless-stats  benchmark.sh  check_performance.sh  ci-health-check.sh  clean-changelog.sh  diagnose-release.sh  fix-changelog.sh  generate-completions.sh  generate-theme-showcase.sh  github-protection-config.yml  pipeline-health-check.sh  pre-release-check.sh  prep-release-changelog.sh  prep-release.sh  publish-crates-io.sh  publish-v0.1.6.sh  release-monitor.sh  release.sh  security-check.sh  setup-branch-protection-gh.sh  setup-branch-protection.sh  setup-fuzzing.sh  test_pager_compatibility.sh  verify-protection-gh.sh  verify-protection.sh  version-status.sh
src/: ast_summarizer.rs  chunker.rs  config.rs  config_manager.rs  config_validation.rs  debt_prevention.rs  error.rs  file_info.rs  formatter.rs  highlighter.rs  json_schema.rs  language.rs  lib.rs  main.rs  performance.rs  processor.rs  processor_builder.rs  profile.rs  streaming.rs  summarizer.rs  summary.rs  summary_item.rs  token_counter.rs  tokenizer.rs  tokens.rs  traits.rs  wizard.rs
tests/: ast_summarizer_js_ts_test.rs  ast_summarizer_python_test.rs  ast_summarizer_test.rs  cli_coverage_tests.rs  cli_documentation_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  streaming_coverage_tests.rs
(+66 files in other folders)
