[package]
name = "batless"
version = "0.3.0"
edition = "2021"
authors = ["Thomas <thomas@docdyhr.com>"]
description = "A non-blocking, LLM-friendly code viewer inspired by bat"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/docdyhr/batless"
repository = "https://github.com/docdyhr/batless"
documentation = "https://docs.rs/batless"
keywords = ["cli", "syntax-highlighting", "code-viewer", "ai", "automation"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = [
    "target/",
    "*.tmp",
    "test_file*.txt",
    "demo_output.txt",
    ".github/",
    "demo.sh",
    "fuzz/",
]
build = "build.rs"

[lib]
name = "batless"
path = "src/lib.rs"

[[bin]]
name = "batless"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
syntect = { version = "5", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "html",
    "dump-load",
    "regex-onig",
] }
is-terminal = "0.4"
termcolor = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.2"
encoding_rs = "0.8"
toml = "0.9"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.21"
serde_json = "1.0"

# Enhanced testing dependencies
proptest = { version = "1.7", default-features = false, features = ["std"] }
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

# Resolve duplicate dependencies by forcing newer compatible versions
[workspace]
resolver = "2"
